--- a/src/pages/DSMContent/cash-sale/cash-sale.html
+++ b/src/pages/DSMContent/cash-sale/cash-sale.html
@@ -128,7 +128,7 @@
     OR
   </div>
 
-  <ion-card *ngIf="cashsale.selectNozzle">
+  <!-- <ion-card *ngIf="cashsale.selectNozzle">
     <ion-card-header text-center text-capitalize class="header-trans">
      Scan Nozzle
     </ion-card-header>
@@ -138,7 +138,7 @@
     </ion-card-content>
 
   
-  </ion-card>
+  </ion-card> -->
 
   <ion-card *ngIf="dsm.selectp" style="margin-bottom: 3px !important;">
     <ion-card-header text-center text-capitalize class="header-trans" style="color:red;">
