--- a/src/pages/DSMContent/credit-sale/credit-sale.html
+++ b/src/pages/DSMContent/credit-sale/credit-sale.html
@@ -170,7 +170,7 @@
     OR
   </div>
 
-  <ion-card *ngIf="nozzleSelect && DSMList.status!=2 && DSMList.fuelRequested!=0.00">
+  <!-- <ion-card *ngIf="nozzleSelect && DSMList.status!=2 && DSMList.fuelRequested!=0.00">
     <ion-card-header text-center text-capitalize class="header-trans">
       Scan Nozzle
     </ion-card-header>
@@ -180,7 +180,7 @@
     </ion-card-content>
 
 
-  </ion-card>
+  </ion-card> -->
   <ion-card *ngIf="transporterInput && DSMList.status!=2 && DSMList.fuelRequested!=0.00" style="margin-bottom: 3px !important;">
     <ion-card-header text-center text-capitalize class="header-trans" style="color:red;">
       Fuel Dispense Entry<br>
@@ -191,10 +191,25 @@
         <form novalidate [formGroup]="user">
           <ion-row>
             <ion-col col-6>
-              <span style="color: red;">*</span>Fuel Actual in Liters
+              <span style="color: red;">*</span> Amount (Rs)
             </ion-col>
             <ion-col col-6>
-              <ion-input type="number" placeholder="Enter Fuel" formControlName="fuelActual" class="form-control"
+              <ion-input type="number" (change)='onChangeAmount($event.target.value)' step="0.01" 
+                placeholder="Amount" [(ngModel)]="crequest.amount" formControlName="amount" class="form-control"></ion-input>
+              <!-- <ion-input type="text" [(ngModel)]="cashsale.amount"></ion-input> -->
+              <ion-item no-lines *ngIf="(user.get('amount').hasError('required') ) && user.get('amount').touched">
+                <div class="error" *ngIf="user.get('amount').hasError('required') && user.get('amount').touched">
+                  *Amount is required.
+                </div>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-6>
+             Fuel Actual in Liters
+            </ion-col>
+            <ion-col col-6>
+              <ion-input type="number" placeholder="Enter Fuel" readonly="{{isReadonly}}" (change)='onChangeTime($event.target.value)' formControlName="fuelActual" class="form-control"
                 [(ngModel)]="crequest.fuelActual"></ion-input>
               <ion-item no-lines
                 *ngIf="( user.get('fuelActual').hasError('minlength') || user.get('fuelActual').hasError('required') ) && user.get('fuelActual').touched">
